Add CRUD for Database. (included soft delete)

--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,1 +1,17 @@
 @import 'variables';
+
+.card-course-item {
+    margin-top: 16px;
+}
+
+.user-avatar {
+    width: 28px;
+    height: 28px; 
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.checkbox-select-all-options {
+    width: 160px;
+    margin: 0 16px;
+}
