--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,1 +1,8 @@
-<h2>Footer</h2>
+<div class="card text-center">
+  <div class="card-body">
+    <h5 class="card-title">Hoai Bao Blog</h5>
+  </div>
+  <div class="card-footer text-body-secondary">
+    2 days ago
+  </div>
+</div>
